--- a/PlantVsZombies/src/sample/GamePlayDay.fxml
+++ b/PlantVsZombies/src/sample/GamePlayDay.fxml
@@ -44,6 +44,11 @@
             <Image url="@../assets/Flag.png" />
          </image></ImageView>
 
+      <ImageView fx:id="UndoButton" fitHeight="75.0" fitWidth="75.0" layoutX="945.0" layoutY="3.0" onMouseClicked="#UndoButton" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../assets/undo.png" />
+         </image> </ImageView>
+      
       <GridPane fx:id="lawn_grid" layoutX="322.0" layoutY="83.0" prefHeight="489.0" prefWidth="694.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="87.0" minWidth="10.0" prefWidth="74.0" />
